--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,13 @@
-Hello world 
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="manifest" href="/manifest.json">
+    <script>
+      if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/sw.js')}
+    </script>
+  </head>
+  <body>
+    <h1>Hello this is a PWA</h1>
+  </body>
+</html>
