--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,33 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="manifest" href="/manifest.json">
+
+<!doctype html>
+<html class="no-js" lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <title>PWA</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#fafafa">
+  
+  <meta property="og:title" content="PWA">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="/">
+  <meta property="og:image" content="/icon-192.png">
+  <link rel="apple-touch-icon" href="icon.png"> 
+  
     <script>
       if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('/sw.js')}
     </script>
+  
+  
   </head>
+  
   <body>
+  
     <h1>Hello this is a PWA</h1>
+
+  
   </body>
 </html>
