--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="manifest" href="/manifest.json">
-  <meta name="theme-color" content="#fafafa">
+  <meta name="theme-color" content="#4224ff">
   
   <meta property="og:title" content="PWA">
   <meta property="og:type" content="">
